tests/neg-macros/newClassExtendsOnlyTrait/Test_2.scala
//> using options -experimental -Yno-experimental

def test: Foo = makeClass("foo") // error
